fixed bug on mobile where content went hidden on smallest screens

--- a/app/global.css
+++ b/app/global.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     background-image: url("assets/background.svg");
     background-repeat: no-repeat;
     background-size: cover;
