--- a/app/styles/frontpage.css
+++ b/app/styles/frontpage.css
@@ -46,7 +46,7 @@
 .welcome-subtitle {
     margin-top: 20px;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .centered-section {
@@ -151,5 +151,23 @@
 @media (max-width: 600px) {
     .container {
         padding: 10px; /* Reduce padding on small screens */
+    }
+    .welcome-section {
+        margin-top: 20px;
+    }
+    .welcome-text {
+        font-size: 20px;
+        font-weight: bold;
+        /* color: #00796b; */
+        color: white
+    }
+    
+    .welcome-subtitle {
+        margin-top: 20px;
+        color: white;
+        font-size: 14px;
+    }
+    h2 {
+        font-size: 20px;
     }
 }
